# oae_firmware

./: .gitignore  .gitmodules  OAE.code-workspace  README.md  pyproject.toml  temp.py
DAC_PopTarts/: .cproject  .mxproject  .project  DAC_PopTarts.ioc
LED_NucleoFlash/: .cproject  .mxproject  .project  CMakeLists.txt  LED_NucleoFlash Debug.launch  LED_NucleoFlash.ioc
NUCLEO_L432KC/: .cproject  .mxproject  .project  CMakeLists.txt  NUCLEO_L432KC Debug.launch  NUCLEO_L432KC.ioc
OAE/: .cproject  .mxproject  .project  CMakeLists.txt  OAE.ioc
OAE_CliffBar/: .cproject  .mxproject  .project  OAE_CliffBar Debug.launch  OAE_CliffBar.ioc
OAE_CliffBar_new/: .cproject  .mxproject  .project  OAE_CliffBar_new.ioc  OAE_CliffBar_new.launch
OAE_PopTarts/: .cproject  .mxproject  .project  CMakeLists.txt  OAE_PopTarts.ioc  OAE_PopTarts.launch  OAE_SwedishFish.ioc  STM32-for-VSCode.config.yaml  STM32L475RCTX_RAM.ld  STM32Make.make
OAE_PopTarts/Core/Inc/: TLV320ADC3120.h  dual_dma.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
OAE_PopTarts/Core/Src/: TLV320ADC3120.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
OAE_PopTarts/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_sai.h
OAE_PopTarts/app/: TLV320ADC3120.c  TLV320ADC3120.h  adc.c  adc.h  app_lib.c  app_lib.h  app_main.c  button.c  button.h  driver_test.c  dual_dma.c  dual_dma.h  lut.c  lut.h  oae_algorithm.c  oae_algorithm.h  tlv320adcx120_page5.h
OAE_PopTarts/cmake/: st-project.cmake
OAE_SwedishFish/: .cproject  .mxproject  .project  OAE_SwedishFish Debug.launch  OAE_SwedishFish.ioc  STM32L475RCTX_FLASH.ld
docs/: embedded_setup.md  (+4 more)
(+148 files in other folders)
