[project]
name = "oae-firmware"
version = "0.1.0"
description = "Firmware and associated software for Global Health's low-cost OAE screening device"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
